--- a/src/app/utility/component/date-dialog/date-dialog.component.css
+++ b/src/app/utility/component/date-dialog/date-dialog.component.css
@@ -18,30 +18,10 @@ http://www.apache.org/licenses/LICENSE-2.0
 * limitations under the License.
 */
 /*
- * Sets the default font family for the body and all elements except material icons.
- */
-
-body,
-*:not(.material-icons) {
-  font-family: Roboto, "Helvetica Neue", sans-serif;
-}
-/*
- * Ensures all heading tags in .mat-typography use the Roboto font.
- */
-
-.mat-typography h1,
-.mat-typography h2,
-.mat-typography h3,
-.mat-typography h4,
-.mat-typography h5,
-.mat-typography h6 {
-  font-family: Roboto, "Helvetica Neue", sans-serif !important;
-}
-/*
  * Styles for the title text in the date dialog.
  */
 
-.title {
+app-date-dialog .title {
   font-size: 1rem !important;
   text-align: center;
   padding: 1px 0 1px 0;
@@ -56,21 +36,70 @@ body,
   );
   border-image-slice: 1;
   border-image-width: 0px 0px 4px 0px;
-  margin: 0;
+  margin: 0 0 25px 0;
 }
 /*
  * Styles for the date range input field.
  */
 
-.daterange{
+app-date-dialog .daterange{
     border: 1px solid gray;
     font-size: 0.8rem;
+}
+/*
+ * Styles for the radio group container.
+ */
+
+app-date-dialog .radio-group {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+  margin-top: 10px;
+  margin-left: 15px;
+}
+/*
+ * Styles for individual radio option.
+ */
+
+app-date-dialog .radio-option {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+/*
+ * Styles for the radio input.
+ */
+
+app-date-dialog .radio-input {
+  width: 18px;
+  height: 18px;
+  cursor: pointer;
+}
+/*
+ * Styles for the radio label.
+ */
+
+app-date-dialog .radio-label {
+  font-size: 0.9rem;
+  color: #333;
+  cursor: pointer;
+  margin: 0;
+}
+/*
+ * Styles for the info icon.
+ */
+
+app-date-dialog .info-icon {
+  color: #00b2dc;
+  font-size: 1rem;
+  cursor: pointer;
+  margin-left: 5px;
 }
 /*
  * Styles for all main action buttons in the dialog.
  */
 
-.all-btn {
+app-date-dialog .all-btn {
   background-color: #00b2dc;
   color: #fff;
   font-size: 0.8rem;
@@ -87,31 +116,54 @@ body,
  * Styles for the button input row.
  */
 
-.btn-input{
+app-date-dialog .btn-input {
   display: flex;
-  align-items: baseline;
-  margin-top: -15px;
+  align-items: center; /* Changed from baseline to center */
+  justify-content: center; /* Ensures it is centered horizontally as well */
+  margin-top: 0; /* Removed the negative margin */
+  height: 100%; /* Ensures the container fills the parent column's height */
 }
 /*
  * Styles for the disabled state of action buttons.
  */
 
-.all-btn:disabled{
+app-date-dialog .all-btn:disabled{
   background-color: gray;
 }
 /*
  * Styles for the close section container.
  */
 
-.close-sec{
+app-date-dialog .close-sec{
   float: right;
   margin-right: 30px;
-  margin-top: 215px;
+  margin-top: 30px;
+  margin-bottom: 20px;
 }
 /*
  * Styles for the close button.
  */
 
-.close-btn{
+app-date-dialog .close-btn{
   width: 100px;
+}
+
+.spinner{
+  color: #00b2dc !important;
+  margin-left: 10px;
+}
+/*
+ * Styles for the delete button.
+ */
+
+app-date-dialog .delete-btn{
+  width: 100px;
+}
+
+
+.loader-row{
+  position: absolute;
+  top: 50%;
+  z-index: 1;
+  right: 50%;
 }
